prueba_controles_semanticos.output
Grammar

    0 $accept: command $end

    1 command: exp

    2 exp: exp MAS term
    3    | exp MENOS term
    4    | exp CONCAT term
    5    | term

    6 term: term POR factor
    7     | term DIV factor
    8     | term MODULO factor
    9     | term EXPON factor
   10     | factor

   11 factor: ENT
   12       | MAS ENT
   13       | MENOS ENT
   14       | REAL
   15       | MAS REAL
   16       | MENOS REAL
   17       | PAR_OP exp PAR_CL
   18       | COMILLA TEXT COMILLA


Terminals, with rules where they appear

$end (0) 0
error (256)
MAS (258) 2 12 15
MENOS (259) 3 13 16
POR (260) 6
DIV (261) 7
PAR_OP (262) 17
PAR_CL (263) 17
CONCAT (264) 4
COMILLA (265) 18
ENT (266) 11 12 13
REAL (267) 14 15 16
TEXT (268) 18
EXPON (269) 9
MODULO (270) 8


Nonterminals, with rules where they appear

$accept (16)
    on left: 0
command (17)
    on left: 1, on right: 0
exp (18)
    on left: 2 3 4 5, on right: 1 2 3 4 17
term (19)
    on left: 6 7 8 9 10, on right: 2 3 4 5 6 7 8 9
factor (20)
    on left: 11 12 13 14 15 16 17 18, on right: 6 7 8 9 10


state 0

    0 $accept: . command $end

    MAS      shift, and go to state 1
    MENOS    shift, and go to state 2
    PAR_OP   shift, and go to state 3
    COMILLA  shift, and go to state 4
    ENT      shift, and go to state 5
    REAL     shift, and go to state 6

    command  go to state 7
    exp      go to state 8
    term     go to state 9
    factor   go to state 10


state 1

   12 factor: MAS . ENT
   15       | MAS . REAL

    ENT   shift, and go to state 11
    REAL  shift, and go to state 12


state 2

   13 factor: MENOS . ENT
   16       | MENOS . REAL

    ENT   shift, and go to state 13
    REAL  shift, and go to state 14


state 3

   17 factor: PAR_OP . exp PAR_CL

    MAS      shift, and go to state 1
    MENOS    shift, and go to state 2
    PAR_OP   shift, and go to state 3
    COMILLA  shift, and go to state 4
    ENT      shift, and go to state 5
    REAL     shift, and go to state 6

    exp     go to state 15
    term    go to state 9
    factor  go to state 10


state 4

   18 factor: COMILLA . TEXT COMILLA

    TEXT  shift, and go to state 16


state 5

   11 factor: ENT .

    $default  reduce using rule 11 (factor)


state 6

   14 factor: REAL .

    $default  reduce using rule 14 (factor)


state 7

    0 $accept: command . $end

    $end  shift, and go to state 17


state 8

    1 command: exp .
    2 exp: exp . MAS term
    3    | exp . MENOS term
    4    | exp . CONCAT term

    MAS     shift, and go to state 18
    MENOS   shift, and go to state 19
    CONCAT  shift, and go to state 20

    $default  reduce using rule 1 (command)


state 9

    5 exp: term .
    6 term: term . POR factor
    7     | term . DIV factor
    8     | term . MODULO factor
    9     | term . EXPON factor

    POR     shift, and go to state 21
    DIV     shift, and go to state 22
    EXPON   shift, and go to state 23
    MODULO  shift, and go to state 24

    $default  reduce using rule 5 (exp)


state 10

   10 term: factor .

    $default  reduce using rule 10 (term)


state 11

   12 factor: MAS ENT .

    $default  reduce using rule 12 (factor)


state 12

   15 factor: MAS REAL .

    $default  reduce using rule 15 (factor)


state 13

   13 factor: MENOS ENT .

    $default  reduce using rule 13 (factor)


state 14

   16 factor: MENOS REAL .

    $default  reduce using rule 16 (factor)


state 15

    2 exp: exp . MAS term
    3    | exp . MENOS term
    4    | exp . CONCAT term
   17 factor: PAR_OP exp . PAR_CL

    MAS     shift, and go to state 18
    MENOS   shift, and go to state 19
    PAR_CL  shift, and go to state 25
    CONCAT  shift, and go to state 20


state 16

   18 factor: COMILLA TEXT . COMILLA

    COMILLA  shift, and go to state 26


state 17

    0 $accept: command $end .

    $default  accept


state 18

    2 exp: exp MAS . term

    MAS      shift, and go to state 1
    MENOS    shift, and go to state 2
    PAR_OP   shift, and go to state 3
    COMILLA  shift, and go to state 4
    ENT      shift, and go to state 5
    REAL     shift, and go to state 6

    term    go to state 27
    factor  go to state 10


state 19

    3 exp: exp MENOS . term

    MAS      shift, and go to state 1
    MENOS    shift, and go to state 2
    PAR_OP   shift, and go to state 3
    COMILLA  shift, and go to state 4
    ENT      shift, and go to state 5
    REAL     shift, and go to state 6

    term    go to state 28
    factor  go to state 10


state 20

    4 exp: exp CONCAT . term

    MAS      shift, and go to state 1
    MENOS    shift, and go to state 2
    PAR_OP   shift, and go to state 3
    COMILLA  shift, and go to state 4
    ENT      shift, and go to state 5
    REAL     shift, and go to state 6

    term    go to state 29
    factor  go to state 10


state 21

    6 term: term POR . factor

    MAS      shift, and go to state 1
    MENOS    shift, and go to state 2
    PAR_OP   shift, and go to state 3
    COMILLA  shift, and go to state 4
    ENT      shift, and go to state 5
    REAL     shift, and go to state 6

    factor  go to state 30


state 22

    7 term: term DIV . factor

    MAS      shift, and go to state 1
    MENOS    shift, and go to state 2
    PAR_OP   shift, and go to state 3
    COMILLA  shift, and go to state 4
    ENT      shift, and go to state 5
    REAL     shift, and go to state 6

    factor  go to state 31


state 23

    9 term: term EXPON . factor

    MAS      shift, and go to state 1
    MENOS    shift, and go to state 2
    PAR_OP   shift, and go to state 3
    COMILLA  shift, and go to state 4
    ENT      shift, and go to state 5
    REAL     shift, and go to state 6

    factor  go to state 32


state 24

    8 term: term MODULO . factor

    MAS      shift, and go to state 1
    MENOS    shift, and go to state 2
    PAR_OP   shift, and go to state 3
    COMILLA  shift, and go to state 4
    ENT      shift, and go to state 5
    REAL     shift, and go to state 6

    factor  go to state 33


state 25

   17 factor: PAR_OP exp PAR_CL .

    $default  reduce using rule 17 (factor)


state 26

   18 factor: COMILLA TEXT COMILLA .

    $default  reduce using rule 18 (factor)


state 27

    2 exp: exp MAS term .
    6 term: term . POR factor
    7     | term . DIV factor
    8     | term . MODULO factor
    9     | term . EXPON factor

    POR     shift, and go to state 21
    DIV     shift, and go to state 22
    EXPON   shift, and go to state 23
    MODULO  shift, and go to state 24

    $default  reduce using rule 2 (exp)


state 28

    3 exp: exp MENOS term .
    6 term: term . POR factor
    7     | term . DIV factor
    8     | term . MODULO factor
    9     | term . EXPON factor

    POR     shift, and go to state 21
    DIV     shift, and go to state 22
    EXPON   shift, and go to state 23
    MODULO  shift, and go to state 24

    $default  reduce using rule 3 (exp)


state 29

    4 exp: exp CONCAT term .
    6 term: term . POR factor
    7     | term . DIV factor
    8     | term . MODULO factor
    9     | term . EXPON factor

    POR     shift, and go to state 21
    DIV     shift, and go to state 22
    EXPON   shift, and go to state 23
    MODULO  shift, and go to state 24

    $default  reduce using rule 4 (exp)


state 30

    6 term: term POR factor .

    $default  reduce using rule 6 (term)


state 31

    7 term: term DIV factor .

    $default  reduce using rule 7 (term)


state 32

    9 term: term EXPON factor .

    $default  reduce using rule 9 (term)


state 33

    8 term: term MODULO factor .

    $default  reduce using rule 8 (term)
